// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineErrors should render Stage errors and step errors in different stage: Stage errors and step errors in different stage 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step1Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 1
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step3Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 3
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple Stage - each with single error: multiple stage - each with single error 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    />
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 2 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple Stage - multiple errors: multiple stage - multiple errors 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    />
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 2 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple Stage errors and step errors in different stage - one stage has different step errors: multiple Stage errors and step errors in different stage - one stage has different step errors 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 2
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step2Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 2
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    />
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 2 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step3Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 3
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step4Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 4
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple Stage errors and step errors in different stage: multiple Stage errors and step errors in different stage 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 2
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step2Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 2
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    />
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 2 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step3Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 3
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple pipeline error: more-issues tooltip 1`] = `
<div
  class="bp3-popover-content"
>
  <div
    class="list"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-size-small StyledProps--font-weight-semi-bold"
      style="--text-line-clamp: 10;"
    >
      Pipeline Error 2
    </p>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple pipeline error: multiple pipeline error 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    common.pipeline
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="pipeline"
      >
        <svg
          height="30"
          viewBox="0 0 38 16"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23.71.966a1 1 0 01.068.067L26.475 4H30V3a1 1 0 011-1h6a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1V5h-3.31l-2.912 3.203a1 1 0 01-1.48 0L19.384 5H18v1a1 1 0 01-1 1h-6a1 1 0 01-1-1V5H8v1a1 1 0 01-1 1H1a1 1 0 01-1-1V3a1 1 0 011-1h6a1 1 0 011 1v1h2V3a1 1 0 011-1h6a1 1 0 011 1v1h1.599l2.699-2.967A1 1 0 0123.71.966zm.04 1.31a1 1 0 00-1.414 0l-1.768 1.767a1 1 0 000 1.414l1.768 1.768a1 1 0 001.414 0l1.768-1.768a1 1 0 000-1.414zM6 3H2a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm10 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm20 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm-19 8a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1v-3a1 1 0 011-1h6zm-1 1h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1v-1a1 1 0 00-1-1z"
            fill="#25A6F7"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Pipeline Error 1
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target bp3-popover-open"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixErrors
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple step errors in different stage: multiple step errors in different stage 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step1Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step3Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 3
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render multiple step errors in same stage: multiple step errors in same stage 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step1Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 1
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render one Stage - multiple error: one stage - multiple errors 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <p
            class="StyledProps--font StyledProps--main moreText StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
            style="width: 100px;"
            tabindex="0"
          >
            cd.moreIssue 
          </p>
        </span>
      </span>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render one Stage error and step error in different stage: one Stage error and step error in different stage 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage2Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step3Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 3
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render one Stage error and step error in same stage: one Stage error and step error in same stage 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step1Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render one Stage error: one stage error 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="approval-stage-icon"
      >
        <svg
          height="30"
          viewBox="0 0 33 33"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M24.695 13.426l2.025 2.026a1 1 0 010 1.414l-9.871 9.871a1 1 0 01-1.414 0L5.248 16.551a1 1 0 010-1.414l9.844-9.844a1 1 0 011.428.014l3.95 4.106 1.441-1.386-3.95-4.106a3 3 0 00-4.283-.042l-9.844 9.844a3 3 0 000 4.242L14.02 28.152a3 3 0 004.243 0l9.871-9.872a3 3 0 000-4.243l-2.025-2.025-1.415 1.414zm1.4-4.114a1 1 0 00-1.413-1.414l-9.271 9.27-3.783-3.782a1 1 0 10-1.414 1.414l5.197 5.197L26.096 9.312z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Stage 1 Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStage
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render one step error: only one step error 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    pipeline.execution.stageTitlePrefix
     
    stage1Name
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon bp3-icon-disable StyledProps--main"
        icon="disable"
      >
        <svg
          data-icon="disable"
          height="30"
          viewBox="0 0 20 20"
          width="30"
        >
          <desc>
            disable
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small StyledProps--font-size-normal StyledProps--font-weight-bold"
      >
        pipeline.execution.stepTitlePrefix step1Name
      </p>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Step Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixStep
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PipelineErrors should render single pipeline error: one pipeline error 1`] = `
<div
  class="pipelineErrorList"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold StyledProps--font-size-normal StyledProps--margin-bottom-medium"
  >
    common.pipeline
  </p>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardWithIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="pipeline"
      >
        <svg
          height="30"
          viewBox="0 0 38 16"
          width="30"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23.71.966a1 1 0 01.068.067L26.475 4H30V3a1 1 0 011-1h6a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1V5h-3.31l-2.912 3.203a1 1 0 01-1.48 0L19.384 5H18v1a1 1 0 01-1 1h-6a1 1 0 01-1-1V5H8v1a1 1 0 01-1 1H1a1 1 0 01-1-1V3a1 1 0 011-1h6a1 1 0 011 1v1h2V3a1 1 0 011-1h6a1 1 0 011 1v1h1.599l2.699-2.967A1 1 0 0123.71.966zm.04 1.31a1 1 0 00-1.414 0l-1.768 1.767a1 1 0 000 1.414l1.768 1.768a1 1 0 001.414 0l1.768-1.768a1 1 0 000-1.414zM6 3H2a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm10 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm20 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm-19 8a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1v-3a1 1 0 011-1h6zm-1 1h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1v-1a1 1 0 00-1-1z"
            fill="#25A6F7"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main cardContent StyledProps--padding-left-medium"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-bottom-small"
        style="--text-line-clamp: 4;"
      >
        Pipeline Error 1
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main fixButton Button--with-current-color Button--variation Button--variation-primary Button--size Button--small"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pipeline.errorFramework.fixErrors
        </span>
      </button>
    </div>
  </div>
</div>
`;
